--- a/src/app/client/sign-up-client/components/form/signUpClient.component.css
+++ b/src/app/client/sign-up-client/components/form/signUpClient.component.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   background: var(--silver);
-  height: 100vh;
+  min-height: 100vh;
   justify-content: center;
   align-items: center;
 }
