--- a/src/app/user/sign-in-user/components/form/sign-in-form.component.css
+++ b/src/app/user/sign-in-user/components/form/sign-in-form.component.css
@@ -84,8 +84,42 @@
   margin-right: -15px;
 }
 
+.error-main {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  margin-bottom: 10px;
+}
+
+.error-message {
+  font-size: small;
+  color: blueviolet;
+  font-weight: bold;
+}
+
+.btn-disable {
+  background: var(--taupe);
+  color: var(--isabelline);
+  cursor: pointer;
+}
+
+.btn-enable {
+  background: var(--melon);
+  color: var(--taupe);
+  cursor: pointer;
+}
+
+.form-section-loader {
+  margin-top: 10px;
+  align-items: center;
+}
+
 @media screen and (max-width: 600px) {
   .sign-in-main {
-    max-width: 250px;
+    max-width: 200px;
+  }
+
+  .error-main {
+    width: 350px;
   }
 }
