--- a/src/app/user/sign-up-user/components/form/signUpUser.component.css
+++ b/src/app/user/sign-up-user/components/form/signUpUser.component.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   background: var(--silver);
-  height: 100vh;
+  min-height: 100%;
   justify-content: center;
   align-items: center;
 }
