--- a/src/app/team/sign-in-team/components/form/sign-in-form.component.html
+++ b/src/app/team/sign-in-team/components/form/sign-in-form.component.html
@@ -16,6 +16,6 @@
     </section>
   </form>
   <p class="sign-up-btn">
-    <a [routerLink]="['/sign-up/client']">Sign up</a>
+    <a [routerLink]="['/admin']">Sign up</a>
   </p>
 </main>
