--- a/src/app/admin/sign-in-admin/components/form/sign-in-form.component.css
+++ b/src/app/admin/sign-in-admin/components/form/sign-in-form.component.css
@@ -3,14 +3,22 @@
   padding: 0;
 }
 
+.main-container {
+  background: var(--silver);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+}
+
 .sign-in-main {
   font-family: "Tahoma", sans-serif;
   padding: 30px 50px;
   max-width: 350px;
-
+  max-height: 350px;
   background: var(--lavender);
   border-radius: 8px;
-  scrollbar-color: var(--pacific-cyan);
   flex: 1;
 }
 
@@ -27,11 +35,23 @@
 }
 
 .form-section-btn {
-  margin-top: 5px;
+  margin-top: 10px;
   font-size: large;
   height: 35px;
   border-radius: 10px;
   border-style: none;
+}
+
+.btn-disable {
+  background: var(--taupe);
+  color: var(--isabelline);
+  cursor: pointer;
+}
+
+.btn-enable {
+  background: var(--melon);
+  color: var(--taupe);
+  cursor: pointer;
 }
 
 .user-section {
@@ -49,33 +69,6 @@
   padding: 10px 20px;
 }
 
-.sign-up-btn {
-  font-size: 20px;
-  color: var(--melon);
-}
-
-.change-type-user {
-  background: var(--melon);
-  font-size: small;
-  border-radius: 50px;
-  border-style: none;
-  box-shadow: 5px 5px 5px var(--taupe);
-  border-color: var(--isabelline);
-  padding: 8px;
-  color: var(--taupe);
-  font-weight: bold;
-  width: 70px;
-}
-
-.type-on-right {
-  margin-left: -15px;
-}
-
-.type-on-left {
-  z-index: 1;
-  margin-right: -15px;
-}
-
 .error-main {
   display: flex;
   flex-direction: column;
@@ -87,17 +80,6 @@
   font-size: small;
   color: blueviolet;
   font-weight: bold;
-}
-
-.btn-disable {
-  background: var(--taupe);
-  color: var(--isabelline);
-}
-
-.btn-enable {
-  background: var(--melon);
-  color: var(--taupe);
-  cursor: pointer;
 }
 
 .form-section-loader {
