--- a/src/app/share/components/left-bar/leftBar.component.css
+++ b/src/app/share/components/left-bar/leftBar.component.css
@@ -5,26 +5,26 @@
   transition: all 0.5s ease;
   z-index: 1;
   top: 0;
-  width: 16.5625rem;
-  height: 100vh;
+  width: 14rem;
+  min-height: 100vh;
 }
 .sidenav-collapsed {
-  width: 5rem;
+  width: 4rem;
 }
 .sidenav .logo-container {
   display: flex;
   align-items: center;
-  padding: 0.938rem 0.938rem 0 0.938rem;
+  padding: 5px;
   width: 100%;
 }
 .sidenav .logo-container .logo {
   background: #fff;
   text-align: center;
-  width: 3rem;
-  min-width: 3rem;
+  width: 2rem;
+  min-width: 2rem;
   border-radius: 0.313rem;
-  padding: 0.313rem;
-  font-size: 24px;
+  padding: 5px;
+  font-size: 20px;
   font-weight: 900;
   cursor: pointer;
   border: none;
@@ -35,15 +35,7 @@
   font-weight: 700;
   color: #fff;
 }
-.sidenav .logo-container .btn-close {
-  margin-left: auto;
-  cursor: pointer;
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  background-color: transparent;
-  border: none;
-}
+
 .sidenav .logo-container .btn-close .fa-times {
   color: var(--isabelline);
   font-size: 24px;
@@ -51,12 +43,10 @@
 
 .sidenav-nav {
   list-style: none;
-  padding: 0.938rem;
-  margin: 0;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: calc(100% - 3.65rem);
   cursor: pointer;
 }
 .sidenav-nav .sidenav-nav-item {
@@ -66,7 +56,8 @@
 .sidenav-nav .sidenav-nav-item .sidenav-nav-link {
   display: flex;
   align-items: center;
-  height: 3rem;
+  height: 2rem;
+  min-height: 2rem;
   color: var(--taupe);
   text-decoration: none;
   border-radius: 0.625rem;
@@ -74,15 +65,12 @@
   transition: all 0.3s ease;
 }
 .sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-icon {
-  font-size: 22px;
+  font-size: 25px;
   width: 2rem;
-  min-width: 2rem;
+  min-width: 1rem;
   text-align: center;
-  padding: 12px;
 }
-.sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-text {
-  margin-left: 1.5rem;
-}
+
 .sidenav-nav .sidenav-nav-item:hover .sidenav-nav-link {
   background-color: #fff;
   color: #000;
@@ -94,4 +82,8 @@
 .active .sidenav-link-icon,
 .active .sidenav-link-text {
   color: #000;
+}
+
+.sidenav-link-text {
+  display: inline;
 }
