feat: Sign in for user

--- a/src/app/client/home-client/components/home/homeClient.component.css
+++ b/src/app/client/home-client/components/home/homeClient.component.css
@@ -3,6 +3,10 @@
   padding: 0px;
 }
 
-.home-client-main {
-  display: flex;
+.main-content {
+  position: relative;
+  min-height: 100vh;
+  top: 0;
+  transition: all 0.5s ease;
+  max-width: 100%;
 }
