--- a/src/app/admin/create-team/components/form/signUpTeam.component.css
+++ b/src/app/admin/create-team/components/form/signUpTeam.component.css
@@ -5,6 +5,7 @@
 
 .sign-up-container {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   margin-left: 5%;
 }
@@ -17,6 +18,7 @@
 
 .error-main {
   display: flex;
+  align-self: center;
   flex-direction: column;
   width: 350px;
 }
