--- a/src/app/admin/create-team/components/success-sign-up/success-sign-up.component.css
+++ b/src/app/admin/create-team/components/success-sign-up/success-sign-up.component.css
@@ -4,8 +4,10 @@
 }
 
 .main-success {
+  max-width: 50%;
   margin-top: 10px;
   margin-left: 10px;
   justify-content: center;
   align-items: center;
+  align-self: center;
 }
