--- a/src/app/share/components/left-bar/leftBar.component.css
+++ b/src/app/share/components/left-bar/leftBar.component.css
@@ -1,89 +1,78 @@
-.sidenav {
-  display: flex;
-  flex-direction: column;
-  background: var(--silver);
-  transition: all 0.5s ease;
-  z-index: 1;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Tahoma", sans-serif;
+}
+
+.sidebar {
+  position: absolute;
   top: 0;
-  width: 14rem;
-  min-height: 100vh;
-}
-.sidenav-collapsed {
-  width: 4rem;
-}
-.sidenav .logo-container {
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  width: 100%;
-}
-.sidenav .logo-container .logo {
-  background: #fff;
-  text-align: center;
-  width: 2rem;
-  min-width: 2rem;
-  border-radius: 0.313rem;
-  padding: 5px;
-  font-size: 20px;
-  font-weight: 900;
-  cursor: pointer;
-  border: none;
-}
-.sidenav .logo-container .logo-text {
-  margin-left: 1.5rem;
-  font-size: 24px;
-  font-weight: 700;
-  color: #fff;
-}
-
-.sidenav .logo-container .btn-close .fa-times {
-  color: var(--isabelline);
-  font-size: 24px;
-}
-
-.sidenav-nav {
-  list-style: none;
-  padding: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  cursor: pointer;
-}
-.sidenav-nav .sidenav-nav-item {
-  width: 100%;
-  margin-bottom: 0.625rem;
-}
-.sidenav-nav .sidenav-nav-item .sidenav-nav-link {
-  display: flex;
-  align-items: center;
-  height: 2rem;
-  min-height: 2rem;
-  color: var(--taupe);
-  text-decoration: none;
-  border-radius: 0.625rem;
-  transition-property: width;
-  transition: all 0.3s ease;
-}
-.sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-icon {
-  font-size: 25px;
-  width: 2rem;
-  min-width: 1rem;
-  text-align: center;
-}
-
-.sidenav-nav .sidenav-nav-item:hover .sidenav-nav-link {
-  background-color: #fff;
-  color: #000;
+  left: 0;
+  height: 100vh;
+  background-color: var(--silver);
+  width: 50px;
+  transition: all 0.5s ease;
 }
 
 .active {
-  background-color: #fff;
-}
-.active .sidenav-link-icon,
-.active .sidenav-link-text {
-  color: #000;
+  width: 250px;
 }
 
-.sidenav-link-text {
+.menu {
+  position: relative;
+  color: var(--taupe);
+  top: 0.4rem;
+  left: 50%;
+  font-size: 1.2rem;
+  line-height: 50px;
+  transform: translateX(-50%);
+  cursor: pointer;
+}
+
+.active .menu {
+  left: 90%;
+}
+
+.sidebar ul li {
+  position: relative;
+  list-style-type: none;
+  height: 50px;
+  width: 90%;
+}
+
+.sidebar ul li a {
+  color: var(--taupe);
   display: inline;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 0.8rem;
+}
+
+.sidebar ul li a:hover {
+  background-color: var(--taupe);
+  color: var(--silver);
+}
+
+.sidebar ul li a i {
+  min-width: 50px;
+  text-align: center;
+  height: 50px;
+  border-radius: 12px;
+  line-height: 50px;
+}
+
+.sidebar .nav-item {
+  font-size: 0%;
+}
+
+.active .nav-item {
+  font-size: medium;
+  display: inline;
+  transition: all 0.7s ease;
+}
+
+.sidebar ul li a.nav-item-active {
+  background-color: var(--taupe);
+  color: var(--silver);
 }
